# mail-merge

./: .gitignore  Dockerfile  README.md  example-config.py  pyproject.toml
scripts/: build.sh  run-with-docker.sh
smm/: __init__.py
smm/templates/: base.html  index.html
